[package]
name = "rinex-cli"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Command line tool parse and analyze RINEX data"
homepage = "https://github.com/gwbres/rinex-cli"
keywords = ["rinex", "gps", "glonass", "galileo", "timing"]
categories = ["science", "command-line-interface", "command-line-utilities"]
edition = "2018"
readme = "README.md"

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
rinex = { git = "https://github.com/gwbres/rinex", branch = "main" }
itertools = "0.10.3"
clap = { version = "~2.27.0", features = ["yaml"] }
